<resources xmlns:xliff="http://schemas.android.com/tools">
    <!--通用-->
    <string name="app_name">千山健康</string>
    <string name="user_text">账&#160;&#160;&#160;&#160;号:</string>
    <string name="user_name">请输入账号</string>
    <string name="pwd_text">密&#160;&#160;&#160;&#160;码:</string>
    <string name="password">请输入密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="not_login">未&#160;登&#160;录</string>
    <string name="registered">注&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="send">发&#160;&#160;&#160;&#160;送</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="go_back">返回</string>
    <string name="exit">退&#160;&#160;&#160;&#160;出</string>
    <string name="scanning">正在扫描二维码</string>
    <string name="login_success">登陆成功</string>
    <string name="failed_login">登陆失败</string>
    <string name="information">个人信息</string>
    <string name="Service_regulations">服务条例</string>
    <string name="Function_introduction">功能介绍</string>
    <string name="Empty_cache_data">清空缓存</string>
    <string name="help">帮助</string>
    <string name="feeBack">反&#160;&#160;&#160;&#160;馈</string>
    <string name="Setting">关&#160;&#160;&#160;&#160;于</string>
    <string name="fb_tv_content">反馈内容</string>
    <string name="fb_et_content">请输入反馈信息</string>
    <string name="i_want_say">请输入说说</string>
    <string name="to_do_list">待处理事项</string>
    <string name="register">注册千山账号</string>
    <string name="user_mobile_name">请输入手机号</string>
    <string name="user_register_name">请输入6-18位数字和字母组合</string>
    <string name="get_security_code">获取验证码</string>
    <string name="me_security_code">请输入验证码</string>
    <string name="cb_xieyi">我已阅读并同意</string>
    <string name="tv_xieyi">《千山健康用户协议》</string>
    <string name="tv_xieyi_toast">请阅读并同意《千山健康用户协议》</string>
    <string name="doctor">医生列表</string>
    <string name="pmd">私人医生</string>
    <string name="loading">正在加载中...</string>
    <string name="add_customer">添加家庭成员</string>
    <string name="customer_info">家庭成员详情</string>
    <!--医生端-->
    <string name="user_manager">用户管理</string>
    <string name="user_infor">患者详情</string>
    <string name="health_message">健康全信息</string>
    <string name="medication">用药记录</string>
    <string name="look_doctor">就医记录</string>
    <string name="QuestionnaireSurvey">问卷调查</string>
    <string name="QuestionnaireSurvey1">中医体质问卷</string>
    <string name="QuestionnaireSurvey2">心理问卷</string>
    <string name="QuestionnaireSurvey3">个人健康常规问卷</string>
    <string name="physical">体检报告</string>
    <string name="blood_sugar">血糖</string>
    <string name="routine_blood_test">血常规</string>
    <string name="function">甲功能</string>
    <string name="lipid_routine">血脂常规</string>
    <string name="health_report">健康私人报告</string>
    <string name="health_report_name">患者姓名</string>
    <string name="health_report_status">私人报告状态</string>
    <string name="health_work">操作</string>
    <!--患者端-->
    <string name="one_key_save">一键急救</string>
    <string name="smart_box">智能药盒</string>
    <string name="start_test">开始测量</string>
    <string name="start_read">开始读取</string>
    <string name="smart_mac">智能血压仪</string>
    <string name="smart_mac_test">血压测量</string>
    <string name="notice_mac">在测量过程中,请保持手臂处于相对静止状态</string>
    <string name="shuzhangya">舒张压:</string>
    <string name="shousuoya">收缩压:</string>
    <string name="xinlv">心率:</string>
    <string name="xueyatesthistory">血压测试记录</string>
    <!--预约时间-->
    <string name="appointment_time">预约诊疗时间</string>
    <string name="appointment_time_now">预约诊疗时间如下:</string>
    <string name="time_appointment">请预约以下时间:</string>
    <string name="submit">提&#160;&#160;&#160;&#160;交</string>
    <string name="date_first">请先选择预约日期</string>
    <string name="time_first">请选择预约时间段</string>
    <!--星期-->
    <string-array name="week_name">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <!--上午-->
    <string name="time1">08:30-09:00</string>
    <string name="time2">09:00-09:30</string>
    <string name="time3">09:30-10:00</string>
    <string name="time4">10:00-10:30</string>
    <string name="time5">10:30-11:00</string>
    <string name="time6">11:00-11:30</string>
    <!--下午-->
    <string name="time7">13:30-14:00</string>
    <string name="time8">14:00-14:30</string>
    <string name="time9">14:30-15:00</string>
    <string name="time10">15:00-15:30</string>
    <string name="time11">15:30-16:00</string>
    <string name="time12">16:00-16:30</string>
    <!--  DeviceListActivity -->
    <string name="device_list">蓝牙列表</string>
    <string name="ble_not_supported">该设备不支持蓝牙BLE</string>
    <string name="ble_not_permissions">请打开蓝牙权限</string>
    <string name="scanning_bluetooth">扫描蓝牙中...</string>
    <string name="select_device">选择一个设备进行连接</string>
    <string name="none_paired">没有配对的设备</string>
    <string name="none_found">找不到设备</string>
    <string name="title_paired_devices">配对的设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="not_connected">你没有连接到一个设备</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">连接. ..</string>
    <string name="title_connected_to">连接到 <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">没有连接</string>
    <string name="bluetooth_connected_first">请先连接蓝牙</string>
    <string name="success_connected">连接成功</string>
    <string name="failed_connected">连接失败</string>
    <string name="open_bluetooth">打开蓝牙</string>
    <string name="connected_bluetooth">连接蓝牙</string>
    <string name="blutooth_is_null">没有蓝牙设备</string>
    <string name="setting">设置</string>
    <string name="bluetooth">连接蓝牙</string>
    <string name="no_bluetooth">请打开蓝牙设备并连接</string>
    <!--ToastWords-->
    <string name="name_is_not_allow_null">用户名不能为空</string>
    <string name="name_is_not_valid">请输入正确的手机号码</string>
    <string name="pwd_is_not_allow_null">密码不能为空</string>
    <string name="pwd_is_not_valid">密码格式不正确,请输入6-18位数字和字母组合</string>
    <string name="data_is_new">已经是最新数据了</string>
    <string name="data_is_load_over">加载完成</string>
    <string name="call_phone_permission">请打开电话权限</string>
    <!--网络判断吐司-->
    <string name="isContent">用户名不能为空</string>
    <string name="notContent">网络异常,请检查网络设置</string>
    <string name="isMobile">当前网络连接不稳定,数据加载缓慢,请稍候...</string>
    <string name="isWifi">当前网络是wifi连接</string>
    <string name="isMobileNet">当前网速较差,数据加载缓慢,请稍候...</string>
    <string name="no_internet">无网络连接</string>
    <string name="generic_server_down">连接服务器失败</string>
    <string name="request_time_out">请求超时,请稍候再试</string>
    <string name="generic_error">网络异常,请稍后再试</string>
    <!--自定义对话框-->
    <string name="title_alert">温馨提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <!--photopicker-->
    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="undo">撤消</string>
    <!--视频-->
    <string name="doctor_chat_list">医生列表</string>
    <string name="video_list">视频列表</string>
</resources>
