<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.example.bjlz.qianshan.views.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/notice_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_start_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_test" />
    <Button
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_start_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_read" />
    <TextView
        android:visibility="gone"
        android:id="@+id/tv_read"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/shousuoya"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tv_gao_ya"
            android:text="00"
            android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/shuzhangya"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tv_di_ya"
            android:text="00"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/xinlv"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tv_xin_lv"
            android:text="00"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:text="@string/xueyatesthistory"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ListView
        android:visibility="gone"
        android:id="@+id/lv_bluetooth"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <com.example.bjlz.qianshan.views.WaveProgressView
        android:id="@+id/waveProgressbar"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectangle1"
        android:layout_gravity="center"
        android:layout_width="40dp"
        android:layout_height="160dp"  />
</LinearLayout>